--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,14 @@
 {
   "cSpell.words": [
     "alipay",
+    "autofocus",
     "automator",
     "dcloudio",
+    "FILESYSTEMS",
     "kuaishou",
+    "nvue",
     "quickapp",
+    "splashscreen",
     "stacktracey",
     "toutiao",
     "weixin"
