--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "@dcloudio/uni-cli-shared": "3.0.0-3070320230222002",
     "@dcloudio/uni-stacktracey": "3.0.0-3070320230222002",
     "@dcloudio/vite-plugin-uni": "3.0.0-3070320230222002",
+    "@vitejs/plugin-vue-jsx": "3.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "install": "0.13.0",
     "jest": "27.0.4",
     "jest-environment-node": "27.5.1",
     "postcss": "8.4.21",
