feat: 引入 nero.png

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,25 @@
 {
   "cSpell.words": [
     "alipay",
+    "ampproject",
     "autofocus",
     "automator",
+    "browserslist",
+    "compat",
     "dcloudio",
     "FILESYSTEMS",
+    "gensync",
+    "jridgewell",
+    "knjsmvrz",
     "kuaishou",
     "nvue",
+    "optimise",
     "quickapp",
+    "snwypj",
     "splashscreen",
     "stacktracey",
     "toutiao",
-    "weixin"
+    "weixin",
+    "ydioaekxrsm"
   ]
 }
