--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "jest": "27.0.4",
     "jest-environment-node": "27.5.1",
     "postcss": "8.4.21",
+    "sass": "1.58.3",
     "typescript": "^4.9.4",
     "vite": "4.0.3",
     "vue-tsc": "^1.0.24"
