--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@dcloudio/uni-app-plus": "3.0.0-3070320230222002",
     "@dcloudio/uni-components": "3.0.0-3070320230222002",
     "@dcloudio/uni-h5": "3.0.0-3070320230222002",
+    "@dcloudio/uni-helper-json": "1.0.13",
     "@dcloudio/uni-mp-alipay": "3.0.0-3070320230222002",
     "@dcloudio/uni-mp-baidu": "3.0.0-3070320230222002",
     "@dcloudio/uni-mp-kuaishou": "3.0.0-3070320230222002",
@@ -58,6 +59,8 @@
     "@dcloudio/uni-cli-shared": "3.0.0-3070320230222002",
     "@dcloudio/uni-stacktracey": "3.0.0-3070320230222002",
     "@dcloudio/vite-plugin-uni": "3.0.0-3070320230222002",
+    "@jridgewell/sourcemap-codec": "1.4.14",
+    "@uni-helper/uni-app-types": "0.5.1",
     "@vitejs/plugin-vue-jsx": "3.0.0",
     "@vue/tsconfig": "^0.1.3",
     "install": "0.13.0",
@@ -66,6 +69,7 @@
     "postcss": "8.4.21",
     "sass": "1.58.3",
     "typescript": "^4.9.4",
+    "uni-app-types": "0.1.7",
     "vite": "4.0.3",
     "vue-tsc": "^1.0.24"
   }
